Fixed footer gap

--- a/assets/themes/skeleton/css/layout.css
+++ b/assets/themes/skeleton/css/layout.css
@@ -39,7 +39,7 @@
 	color: #797979;
 	text-shadow: rgba(255, 254, 255, 0.73) 0 1px 1px;
 	text-align: center;
-	height: 80px;
+	height: 85px;
 	margin: -80px 0 0 0;
 	padding: 25px 0 0 0;
 	position: relative;
